--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,16 +1,16 @@
-body{background-color:#fff;font-family: 'Ubuntu', sans-serif, 'Roboto', sans-serif;font-size:14px;font-size:14px\0/;border:0;margin:0;}
+body{background-color:#fff;font-family: 'Roboto', sans-serif;font-size:14px;font-size:14px\0/;border:0;margin:0;}
 a{text-decoration:none;color:#000;border:0;}
 a:hover{text-decoration:none;color:#fff;border:0;}
 h1{
 	font-family:'Ubuntu', sans-serif;
-	font-size:35px;
+	font-size:30px;
 	font-weight:500;
 	font-style:normal;
 	line-height:27px;
 }
 h2{
 	font-family:'Ubuntu', sans-serif;
-	font-size:25px;
+	font-size:20px;
 	font-weight:500;
 	font-style:normal;
 	line-height:27px;
@@ -18,10 +18,11 @@ h2{
 }
 h3{
 	font-family:'Ubuntu', sans-serif;
-	font-size:20px;
+	font-size:18px;
 	font-weight:500;
 	font-style:normal;
 	line-height:27px;
+	letter-spacing:-1px;
 }
 h5{
 	font-family:'Ubuntu', sans-serif;
@@ -29,6 +30,16 @@ h5{
 	font-weight:500;
 	font-style:normal;
 	line-height:27px;
+	letter-spacing:-1px;
+}
+p {
+	font-family:'Roboto', sans-serif;
+	font-size:18px;
+	font-weight:500;
+	font-style:bold;
+	line-height:25px;
+	letter-spacing:0px;
+	margin:20px 20px 0px 20px;
 }
 a img{text-decoration:none;border:none;}
 .mex1 button:hover{background-color:#E73333;}
@@ -43,37 +54,36 @@ a img{text-decoration:none;border:none;}
 .menu-header{width:100%;max-width:1024px;margin:0 auto;}
 .mex1{width:100%;height:100%;top:0;left:0;overflow:hidden;position:relative;}
 .img-fondo-mex1{height:100%;width:100%;max-width:1024px;margin:0px auto;position:relative;top:0;left:0;overflow:hidden;background:#ffffff url("../images/mappaetablet.jpg") no-repeat center bottom /cover;}
-.mex1 h1{text-align:center;margin-top:60px;color:#ff0000;}
-.mex1 h2{text-align:center;margin-top:10px;color:#000;}
-a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Arial,Time new Roman,Verdana;}
+.mex1 h1{text-align:center;margin:60px 0px 0px 0px;color:#ff0000;}
+.mex1 h2{text-align:center;margin:10px 0px 0px 0px;color:#000;}
+a#leadpages-close-button{z-index:1;top:-9px;right:-9px;}
 #leadpages-close-button{display:block;font-size:16pt;position:absolute;top:-9pt;right:-9pt;width:18pt;height:18pt;color:#FFF;line-height:20pt;text-align:center;text-decoration:none;vertical-align:baseline;cursor:pointer;background:none repeat scroll 0 0 #000;border:2pt solid #FFF;border-radius:18pt;}
 .box-centro{height:150px;}
 .dowload{width:150px;height:250px;background-color:#fff;margin-left:60px!important;float:left;}
 .dowload img{width:100%;}
 .promozione{width:500px;height:110px;margin:0 35px;float:left;}
-.promozione p{font-family:'Montserrat',sans-serif,Arial,Time new Roman,Verdana;font-size:20px;padding:0!important;}
+.promozione p{font-size:20px;padding:0!important;}
 .promozione input{width:90%;margin:25px 20px;background-color:#fff;}
 .style-bottom1{width:50%;height:100%;top:0px;right:0px;float:left;position:relative;}
-.mex1 .bottone{width: 200px;height: 55px;background-color: #f33131;border: 2px solid #c80707;border-radius: 10px;color: #ffffff;float: left;font-family: "Open Sans Condensed",sans-serif,Arial,Time new Roman,Verdana;font-size: 20px;left: 28%;top: 45%;position: relative;cursor:pointer;}
+.mex1 .bottone{width: 200px;height: 55px;background-color: #f33131;border: 2px solid #c80707;border-radius: 10px;color: #ffffff;float: left;font-size: 20px;left: 28%;top: 45%;position: relative;cursor:pointer;}
 .button{width:500px;height:65px;float:left;text-align:center;}
 .mex1 .bottone p{margin:15px 25px;font-size:16px;text-align:center;}
 .privacy{height:30px;width:500px;padding:0!important;margin-top:5px!important;float:left;}
-.privacy p{font-size:15px;font-family:Arial,Time new Roman,Verdana;padding:0!important;margin:0!important;}
+.privacy p{font-size:15px;padding:0!important;margin:0!important;}
 .style-bottom{width:50%;height:100%;top:0px;right:0px;float:right;position:relative;}
-.bottone-acquista{width: 200px;height: 55px;background-color:#F29120;border:2px solid #BC670F;border-radius: 10px;color: #ffffff;float: left;font-family: "Open Sans Condensed",sans-serif,Arial,Time new Roman,Verdana;font-size: 20px;left: 35%;top: 45%;position: relative;cursor:pointer;}
+.bottone-acquista{width: 200px;height: 55px;background-color:#F29120;border:2px solid #BC670F;border-radius: 10px;color: #ffffff;float: left;font-size: 20px;left: 35%;top: 45%;position: relative;cursor:pointer;}
 .bottone-acquista a:hover{background-color:#DE9643!important;}
-.md-content button{border-bottom:2px solid #ffb403;border-top:0;border-left:0;border-right:0;background:#F2C105;color:#fff;font-size:20px;font-family:'Open Sans Condensed',sans-serif,Arial,Time new Roman,Verdana;cursor:pointer;display:inline-block;margin:0;width:70%;height:50px}
+.md-content button{border-bottom:2px solid #ffb403;border-top:0;border-left:0;border-right:0;background:#F2C105;color:#fff;font-size:20px;cursor:pointer;display:inline-block;margin:0;width:70%;height:50px}
 .md-content .button button:hover{background:#ffcb01;}
 /* PERCHè GESTIONE MESSAGGI */
 .colore-fondo-body{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
-.header-body{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
-.img-gm{width:100%;max-width:1024px;height:80px;margin:0 auto;}
-.img-gm img{margin:-15px 0px 0px 0px;}
+.header-body{width:100%;height:80px;background-color:#29917e;}
+.img-gm{width:55%;max-width:1024px;height:80px;margin:0 auto;}
+.img-gm img{float:left;margin:-15px 0px 0px 0px;}
 .header-body h2{width:100%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
 .container-body{width:100%;max-width:1024px;height:100%;margin:0 auto;background:url("../images/body.jpg") no-repeat center bottom;}
 .container-body h2{margin:50px 20px 0px 20px;}
 .container-body h3{margin:20px 20px 0px 20px;}
-.container-body p{font-size:17px;font-weight:bold;margin:20px 20px 0px 20px;}
 .testo-linea{width:970px;height:85px;}
 .h3{float:left;height:50px;}
 .hr{border-bottom:4px solid #f00;height:40px;float:left;padding-left:2px;}
@@ -84,13 +94,13 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 /* PERCHè GESTIONE MESSAGGI CONTENUTO */
 .contenuto{width:100%;height:100%;top:0;left:0;position:relative;overflow:hidden;background-color:#fff;float:left;}
 .descrizione-contenuto{width:100%;max-width:1024px;height:100%;margin:0 auto;padding-top:40px;background:url("../images/descrizione.jpg") no-repeat center right;}
-.descrizione-contenuto p{margin:20px 20px 0px 20px;font-size:18px;color:#000;}
+.descrizione-contenuto p{margin:20px 20px 0px 20px;color:#000;}
 /* CLIENTI */
 .clienti{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
-.header-clienti{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
+.header-clienti{width:100%;height:80px;background-color:#29917e;}
 .img-clienti{width:100%;max-width:1024px;height:80px;margin:0 auto;}
 .img-clienti img{margin:-10px 0px 0px 0px;float:left;}
-.clienti h2{width:75%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
+.clienti h2{width:60%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
 .contenuto-clienti{width:100%;max-width:1024px;height:100%;margin:0 auto;}
 .box-foto{width:24%;height:100%;float:left;text-align:center;margin-left:10px;margin-top:15px;}
 .box-foto img{margin:10px;}
@@ -99,7 +109,7 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .stellav{background-image:url("../images/stellavuota.png");background-repeat:no-repeat;margin-left:3px;height:25px;width:25px;float:left;}
 /* SCARICA */
 .scarica{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
-.header-scarica{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
+.header-scarica{width:100%;height:80px;background-color:#29917e;}
 .img-scarica{width:100%;max-width:1024px;height:80px;margin:0 auto;}
 .img-scarica img{margin:-15px 0px 0px 0px;float:left;}
 .scarica h2{width:85%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
@@ -118,7 +128,7 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .testo-screenschot{width:100%;height:50px;text-align:center;margin-top:15px;float:left;}
 /* LICENZA */
 .licenza{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
-.header-licenza{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
+.header-licenza{width:100%;height:80px;background-color:#29917e;}
 .img-acquista{width:100%;max-width:1024px;height:80px;margin:0 auto;}
 .img-acquista img{margin:-15px 0px 0px 0px;float:left;}
 .licenza h2{width:40%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
@@ -126,20 +136,20 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .box-promozione{width:300px;height:70px;margin:0px auto;}
 .box-descprezzo{width:470px;height:160px;margin:0 auto;}
 .box-descprezzo .tabella{width:470px;display:table;margin:30px auto;font-size:15px;}
-.box-descprezzo .riga1{clear:both;display:block;display:table-row;width:100%;height:30px;background-color:#d9d9d9;font-family:'Montserrat',sans-serif;}
-.box-descprezzo .riga2{clear:both;display:block;display:table-row;width:100%;height:35px;background-color:#FFF;font-family:'Montserrat',sans-serif;}
-.box-descprezzo .colonna1{float:left;width:60%;display:table-cell;text-align:center;margin-top:7px;font-family:'Montserrat',sans-serif;}
-.box-descprezzo .colonna2{float:left;width:40%;display:table-cell;text-align:center;margin-top:7px;font-family:'Montserrat',sans-serif;}
-.box-descprezzo .colonna3{float:left;width:60%;display:table-cell;margin-top:5px;text-align:right;font-family:'Montserrat',sans-serif;margin-right:2%;}
+.box-descprezzo .riga1{clear:both;display:block;display:table-row;width:100%;height:30px;background-color:#d9d9d9;}
+.box-descprezzo .riga2{clear:both;display:block;display:table-row;width:100%;height:35px;background-color:#FFF;}
+.box-descprezzo .colonna1{float:left;width:60%;display:table-cell;text-align:center;margin-top:7px;}
+.box-descprezzo .colonna2{float:left;width:40%;display:table-cell;text-align:center;margin-top:7px;}
+.box-descprezzo .colonna3{float:left;width:60%;display:table-cell;margin-top:5px;text-align:right;margin-right:2%;}
 .box-descprezzo .colonna3 span{font-size:9px;}
-.box-descprezzo .colonna4{float:left;width:35%;display:table-cell;margin-top:5px;text-align:center;font-family:'Montserrat',sans-serif;}
+.box-descprezzo .colonna4{float:left;width:35%;display:table-cell;margin-top:5px;text-align:center;}
 .box-descprezzo .colonna4 span{font-size:9px;}
 .box-descprezzo .colonna4 font{color:#f00;}
 .aggiungi{width:205px;margin:0 auto;}
-.aggiungi-bottone{width:200px;height:50px;margin:0 auto;background-color:#F33131;border:2px solid #C80707;border-radius:10px 10px 10px 10px;font-size:18px;font-family:'Open Sans Condensed',sans-serif,Arial,Time new Roman,Verdana;}
+.aggiungi-bottone{width:200px;height:50px;margin:0 auto;background-color:#F33131;border:2px solid #C80707;border-radius:10px 10px 10px 10px;font-size:18px;}
 /* ACQUISTA SMS */
 .box-crediti{width:100%;height:auto;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
-.header-crediti{width:100%;height:70px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
+.header-crediti{width:100%;height:70px;background-color:#29917e;}
 .img-crediti{width:100%;height:70px;margin:0 auto;}
 .img-crediti img{margin:-15px 0px 0px 0px;float:left;}
 .header-crediti h2{width:40%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
@@ -147,23 +157,23 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .descrizione-pagamento{width:95%;max-width:1024px;height:auto;margin:15px auto;}
 .descrizione-pagamento p{text-align:left;}
 .tabella{display:table;max-width:990px;width:100%;margin:0 auto;font-size:15px;}
-.riga1{clear:both;display:block;display:table-row;width:100%;height:30px;background-color:#d9d9d9;font-family:'Montserrat',sans-serif;}
+.riga1{clear:both;display:block;display:table-row;width:100%;height:30px;background-color:#d9d9d9;}
 .riga1 .colonna{margin-top:8px;}
 .riga2{clear:both;display:block;display:table-row;width:100%;height:45px;background-color:#fff;}
 .riga3{clear:both;display:block;display:table-row;width:100%;height:20px;background-color:#fff;}
-.colonna{float:left;width:25%;display:table-cell;text-align:center;margin-top:20px;font-family:'Montserrat',sans-serif;}
+.colonna{float:left;width:25%;display:table-cell;text-align:center;margin-top:20px;}
 .colonna span{font-size:10px;}
-.colonna4{float:left;width:24%;display:table-cell;text-align:center;margin-top:5px;font-family:'Montserrat',sans-serif;}
-.colonna4 .bottonerosso{font-size:10px;margin:10px auto;font-family:'Montserrat',sans-serif;}
+.colonna4{float:left;width:24%;display:table-cell;text-align:center;margin-top:5px;}
+.colonna4 .bottonerosso{font-size:10px;margin:10px auto;}
 .colonna p{margin:0;color:#f00;}
 .aggiungi-tab{width:150px;margin:0 auto;}
 .aggiungi-tab-rosso{width:150px;margin:0 auto;}
-.colonna4 .bottone{width:150px;height:40px;margin:0 auto;background-color:#F29120;border:2px solid #BC670F;border-radius:10px;color:#000;font-family:'Montserrat',sans-serif;font-size:10px;}
-.colonna4 .bottonerosso{width:150px;height:40px;margin:0 auto;background-color:#F33131;border:2px solid #C80707;border-radius:10px;font-family:'Montserrat',sans-serif;font-size:10px;}
+.colonna4 .bottone{width:150px;height:40px;margin:0 auto;background-color:#F29120;border:2px solid #BC670F;border-radius:10px;color:#000;font-size:10px;}
+.colonna4 .bottonerosso{width:150px;height:40px;margin:0 auto;background-color:#F33131;border:2px solid #C80707;border-radius:10px;font-size:10px;}
 .textfine-crediti{width:95%;height:auto;margin:10px auto;text-align:center;font-size:13px;}
 /* GUIDA */
 .box-guida{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
-.header-guida{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
+.header-guida{width:100%;height:80px;background-color:#29917e;}
 .img-guida{width:100%;height:80px;margin:0 auto;}
 .img-guida img{margin:-5px 0px 0px 0px;float:left;}
 .header-guida h2{width:25%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
@@ -177,15 +187,16 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 /* FOOTER */
 .footer{width:100%;height:auto;float:left;background-color:#fff;}
 .footer-container{width:990px;height:300px;margin:10px auto;}
-.box-footer-left{width:22%;height:100%;float:left;text-align:left;margin:0 10px;font-family:'Montserrat',sans-serif;}
-.box-footer-left ul{padding:0;margin:0;list-style:none;font-size:15px;font-family:'Montserrat',sans-serif;}
+.box-footer-left{width:22%;height:100%;float:left;text-align:left;margin:0 10px;}
+.box-footer-left ul{padding:0;margin:0;list-style:none;font-size:15px;}
 .box-footer-left a:hover{color:#f00;}
-.box-footer-center{width:23%;height:100%;float:left;text-align:center;margin:0 10px;font-family:'Montserrat',sans-serif;}input{height:40px;width:215px;background-color:#FFBF2E;font-family:inherit;border:1px solid #000;border-radius:10px;color:#000;font-size:15px;margin:0 0 12px;padding-left:10px;float:right;}
+.box-footer-center{width:23%;height:100%;float:left;text-align:center;margin:0 10px;}
+input{height:40px;width:215px;background-color:#FFBF2E;border:1px solid #000;border-radius:10px;color:#000;font-size:15px;margin:0 0 12px;padding-left:10px;float:right;}
 .box-footer-center .bottone{width:150px;height:40px;margin:0 auto;background-color:#F33131;border:2px solid #C80707;border-radius:10px;float:right;}
-.box-footer-center .bottone p{color:#FFF!important;margin:5px auto;font-size:18px;font-family:'Open Sans Condensed',sans-serif,Arial,Time new Roman,Verdana;text-align:center;}
+.box-footer-center .bottone p{color:#FFF!important;margin:5px auto;font-size:18px;}
 .footer-bottom{width:155px;float:right;}
 .text-left{text-align:left;font-size:15px;}
-.box-footer-right{width:23%;height:300px;float:left;text-align:right;margin:0 10px;font-family:'Montserrat',sans-serif;}
+.box-footer-right{width:23%;height:300px;float:left;text-align:right;margin:0 10px;}
 .email{height:25px;margin-top:15px;font-size:16px;margin-bottom:35px;}
 .email a:hover{color:#f00;}
 .info{height:50px;font-size:16px;}
@@ -211,18 +222,6 @@ html, body {
   /* you need to set this to assign to the main element a min height of 100% */
   height: 100%;
 }
-
-/*body {
-  font-size: 100%;
-  font-family: "Titillium Web", sans-serif;
-  color: #4e6361;
-  background-color: #f5f4e9;
-}
-
-a {
-  color: #6cac70;
-  text-decoration: none;
-}*/
 
 /* -------------------------------- 
 
@@ -347,10 +346,11 @@ Main components
 	list-style:none;
 	float:left;
 	font-family:'Ubuntu', sans-serif;
-	font-size:14px;
+	font-size:15px;
 	font-weight:500;
 	font-style:normal;
-	line-height:19px;
+	line-height:20px;
+	letter-spacing:-1px;
 }
 #cd-top-nav li {
 	width:140px;
@@ -601,10 +601,24 @@ Main components
 .no-touch #cd-lateral-nav .socials a:hover.cd-google {
   background-position: -96px -32px;
 }
+@media only screen and (max-width: 1000px) {
+	.contenuto-clienti{
+		height:auto;
+	}
+	.clienti{
+		height:auto;
+	}
+	.header-clienti{
+		height:auto;
+	}
+}
 @media only screen and (max-width: 700px) {
 	/* MEX INIZIALE CON SFONDO TABLET */
 	.img-fondo-mex1{
 		background:none;
+	}
+	.mex1 h1{
+		margin:70px 0px 0px 0px;
 	}
 	.style-bottom1{
 		width:100%;
@@ -629,13 +643,56 @@ Main components
 		top:0;
 	}
 	/* PERCHè GESTIONE MESSAGGI */
+	.colore-fondo-body{
+		height:auto;
+	}
 	.header-body{
 		height:auto;
 	}
 	.img-gm{
+		width:100%;
 		height:auto;
+	}
+	.img-gm img{
+		float:none;
+		margin-top:-25px;
 	}
 	.header-body h2{
 		width:100%;
 	}
+	.container-body{
+		height:auto;
+		background:url("../images/body.jpg") no-repeat center top;
+	}
+	/* PERCHè GESTIONE MESSAGGI CONTENUTO */
+	.contenuto{
+		height:auto;
+	}
+	.descrizione-contenuto{
+		background:#ffffff;
+	}
+	/* CLIENTI */
+	.clienti{
+		height:auto;
+	}
+	.header-clienti{
+		height:auto;
+	}
+	.img-clienti{
+		width:100%;
+		height:auto;
+	}
+	.img-clienti img{
+		float:none;
+		margin-top:-25px;
+	}
+	.clienti h2{
+		width:100%;
+	}
+	.box-foto{
+		width:100%;
+		margin-left:0px;
+	}
+}
+@media only screen and (max-width: 700px) {
 }
